# gen/provider/resource_webdomain/webdomain_resource_gen.go
@@ -29,14 +29,25 @@ func WebdomainResourceSchema(ctx context.Context) schema.Schema {
 			"created_at": schema.StringAttribute{
 				Computed: true,
 			},
-			"domain": schema.StringAttribute{
-				Computed: true,
+			"dns_error": schema.StringAttribute{
+				Computed:            true,
+				Description:         "Error encountered when checking DNS records.",
+				MarkdownDescription: "Error encountered when checking DNS records.",
 			},
-			"domain_display": schema.StringAttribute{
-				Computed: true,
+			"dns_last_check": schema.StringAttribute{
+				Computed:            true,
+				Description:         "When the DNS records were checked last.",
+				MarkdownDescription: "When the DNS records were checked last.",
 			},
-			"domain_idn": schema.StringAttribute{
-				Computed: true,
+			"dns_state": schema.StringAttribute{
+				Computed:            true,
+				Description:         "* `VALID` - valid\n* `INVALID` - invalid, could check, but invalid result\n* `ERROR` - error, could not check\n* `UNCHECKED` - unchecked, did not check yet\n* `IGNORED` - ignored, do not check",
+				MarkdownDescription: "* `VALID` - valid\n* `INVALID` - invalid, could check, but invalid result\n* `ERROR` - error, could not check\n* `UNCHECKED` - unchecked, did not check yet\n* `IGNORED` - ignored, do not check",
+			},
+			"dns_validation_token": schema.StringAttribute{
+				Computed:            true,
+				Description:         "Token used to verify domain ownership via DNS TXT record.",
+				MarkdownDescription: "Token used to verify domain ownership via DNS TXT record.",
 			},
 			"format": schema.StringAttribute{
 				Optional: true,
@@ -68,15 +79,16 @@ func WebdomainResourceSchema(ctx context.Context) schema.Schema {
 }
 
 type WebdomainModel struct {
-	Asteroid      types.String `tfsdk:"asteroid"`
-	AsteroidName  types.String `tfsdk:"asteroid_name"`
-	CreatedAt     types.String `tfsdk:"created_at"`
-	Domain        types.String `tfsdk:"domain"`
-	DomainDisplay types.String `tfsdk:"domain_display"`
-	DomainIdn     types.String `tfsdk:"domain_idn"`
-	Format        types.String `tfsdk:"format"`
-	Name          types.String `tfsdk:"name"`
-	NameDisplay   types.String `tfsdk:"name_display"`
-	NameIdn       types.String `tfsdk:"name_idn"`
-	UpdatedAt     types.String `tfsdk:"updated_at"`
+	Asteroid           types.String `tfsdk:"asteroid"`
+	AsteroidName       types.String `tfsdk:"asteroid_name"`
+	CreatedAt          types.String `tfsdk:"created_at"`
+	DnsError           types.String `tfsdk:"dns_error"`
+	DnsLastCheck       types.String `tfsdk:"dns_last_check"`
+	DnsState           types.String `tfsdk:"dns_state"`
+	DnsValidationToken types.String `tfsdk:"dns_validation_token"`
+	Format             types.String `tfsdk:"format"`
+	Name               types.String `tfsdk:"name"`
+	NameDisplay        types.String `tfsdk:"name_display"`
+	NameIdn            types.String `tfsdk:"name_idn"`
+	UpdatedAt          types.String `tfsdk:"updated_at"`
 }
