# internal/provider/maildomain_resource.go
@@ -82,9 +82,6 @@ func (r *MaildomainResource) Create(ctx context.Context, req resource.CreateRequ
 	plan.DnsState = types.StringValue(string(Maildomain.DNSState))
 	plan.DnsLastCheck = types.StringValue(Maildomain.DNSLastCheck.Or(time.Now()).Format(time.RFC3339))
 	plan.DnsError = types.StringValue(Maildomain.DNSError.Or(""))
-	plan.Domain = types.StringValue(Maildomain.Domain)
-	plan.DomainDisplay = types.StringValue(Maildomain.DomainDisplay)
-	plan.DomainIdn = types.StringValue(Maildomain.DomainIdn)
 	plan.Format = types.StringValue("json")
 	plan.NameIdn = types.StringValue(Maildomain.Name)
 	plan.NameDisplay = types.StringValue(Maildomain.NameDisplay)
@@ -118,9 +115,6 @@ func (r *MaildomainResource) Read(ctx context.Context, req resource.ReadRequest,
 	state.DnsState = types.StringValue(string(Maildomain.DNSState))
 	state.DnsLastCheck = types.StringValue(Maildomain.DNSLastCheck.Or(time.Now()).Format(time.RFC3339))
 	state.DnsError = types.StringValue(Maildomain.DNSError.Or(""))
-	state.Domain = types.StringValue(Maildomain.Domain)
-	state.DomainDisplay = types.StringValue(Maildomain.DomainDisplay)
-	state.DomainIdn = types.StringValue(Maildomain.DomainIdn)
 	state.Format = types.StringValue("json")
 	state.NameIdn = types.StringValue(Maildomain.Name)
 	state.NameDisplay = types.StringValue(Maildomain.NameDisplay)
@@ -166,9 +160,6 @@ func (r *MaildomainResource) Update(ctx context.Context, req resource.UpdateRequ
 	plan.DnsState = types.StringValue(string(Maildomain.DNSState))
 	plan.DnsLastCheck = types.StringValue(Maildomain.DNSLastCheck.Or(time.Now()).Format(time.RFC3339))
 	plan.DnsError = types.StringValue(Maildomain.DNSError.Or(""))
-	plan.Domain = types.StringValue(Maildomain.Domain)
-	plan.DomainDisplay = types.StringValue(Maildomain.DomainDisplay)
-	plan.DomainIdn = types.StringValue(Maildomain.DomainIdn)
 	plan.Format = types.StringValue("json")
 	plan.NameIdn = types.StringValue(Maildomain.Name)
 	plan.NameDisplay = types.StringValue(Maildomain.NameDisplay)
