# internal/provider/webdomain_resource.go
@@ -79,9 +79,6 @@ func (r *WebdomainResource) Create(ctx context.Context, req resource.CreateReque
 	plan.Asteroid = types.StringValue(Webdomain.Asteroid)
 	plan.AsteroidName = types.StringValue(Webdomain.Asteroid)
 	plan.CreatedAt = types.StringValue(Webdomain.CreatedAt.Format(time.RFC3339))
-	plan.Domain = types.StringValue(Webdomain.Domain)
-	plan.DomainDisplay = types.StringValue(Webdomain.DomainDisplay)
-	plan.DomainIdn = types.StringValue(Webdomain.DomainIdn)
 	plan.Format = types.StringValue("json")
 	plan.NameIdn = types.StringValue(Webdomain.Name)
 	plan.NameDisplay = types.StringValue(Webdomain.NameDisplay)
@@ -112,9 +109,6 @@ func (r *WebdomainResource) Read(ctx context.Context, req resource.ReadRequest, 
 	state.Asteroid = types.StringValue(Webdomain.Asteroid)
 	state.AsteroidName = types.StringValue(Webdomain.Asteroid)
 	state.CreatedAt = types.StringValue(Webdomain.CreatedAt.Format(time.RFC3339))
-	state.Domain = types.StringValue(Webdomain.Domain)
-	state.DomainDisplay = types.StringValue(Webdomain.DomainDisplay)
-	state.DomainIdn = types.StringValue(Webdomain.DomainIdn)
 	state.Format = types.StringValue("json")
 	state.NameIdn = types.StringValue(Webdomain.Name)
 	state.NameDisplay = types.StringValue(Webdomain.NameDisplay)
@@ -157,9 +151,6 @@ func (r *WebdomainResource) Update(ctx context.Context, req resource.UpdateReque
 	plan.Asteroid = types.StringValue(Webdomain.Asteroid)
 	plan.AsteroidName = types.StringValue(Webdomain.Asteroid)
 	plan.CreatedAt = types.StringValue(Webdomain.CreatedAt.Format(time.RFC3339))
-	plan.Domain = types.StringValue(Webdomain.Domain)
-	plan.DomainDisplay = types.StringValue(Webdomain.DomainDisplay)
-	plan.DomainIdn = types.StringValue(Webdomain.DomainIdn)
 	plan.Format = types.StringValue("json")
 	plan.NameIdn = types.StringValue(Webdomain.Name)
 	plan.NameDisplay = types.StringValue(Webdomain.NameDisplay)
